apps/outline/outline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline
spec:
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
      - name: outline
        image: docker.getoutline.com/outlinewiki/outline:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: outline-data
          mountPath: /var/lib/outline/data
      volumes:
      - name: outline-data
        persistentVolumeClaim:
          claimName: outline-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: outline
