apps/outline/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: outline-postgres
  namespace: outline
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: outline-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:12-alpine
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: outline-postgres
  namespace: outline
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
