apps/outline/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline-redis
  namespace: outline
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
---
apiVersion: v1
kind: Service
metadata:
  name: outline-redis
  namespace: outline
spec:
  ports:
  - port: 6379
  selector:
    app: redis
